Fix problem with text overflow on events

--- a/src/pages/goals/goals.scss
+++ b/src/pages/goals/goals.scss
@@ -19,6 +19,12 @@ page-goals {
         }
     }
 
+    .calendar-list {
+        ion-label {
+            text-overflow: clip;
+        }
+    }
+
     .goals {
         height: 60%;
         min-height: 300px;
